-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 12, 13
-
Component/s: hotspot
-
b12
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8222847 | 11.0.4 | Martin Doerr | P3 | Resolved | Fixed | b01 |
The atomics in atomic_aix/linux_ppc.hpp use inline assembler memory barriers. They need a "clobber memory" effect in order to get handled correctly by C++ compilers.
We haven't seen issues so far, but we should avoid problems with future compiler versions.
We haven't seen issues so far, but we should avoid problems with future compiler versions.
- backported by
-
JDK-8222847 [PPC64] Clobber memory effect missing for memory barriers in atomics
-
- Resolved
-