8220441: [PPC64] Clobber memory effect missing for memory barriers in atomics

Reviewed-by: simonis, goetz